fix popup window not showing opacity in the entire page

--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -1,6 +1,6 @@
 .page__container {
   margin: 45px auto 60px;
-  min-height: 100vh;
+  min-height: 100%;
   max-width: 1280px;
   font-family: "Inter", "sans-serif";
   position: relative;
