--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,5 @@
 .page {
   background-color: #000000;
   width: 100%;
+  height: 100vh;
 }
