--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,6 @@
 .popup {
   width: 100%;
-  height: 100vh;
+  min-height: 100%;
   position: absolute;
   left: 0;
   top: 0;
